--- a/window-shopper/window-shopper/Base.lproj/Main.storyboard
+++ b/window-shopper/window-shopper/Base.lproj/Main.storyboard
@@ -1,24 +1,85 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" systemVersion="17A277" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
-        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--MainVC-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="MainVC" customModule="window_shopper" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="faJ-ed-Tum"/>
+                        <viewControllerLayoutGuide type="bottom" id="zuT-Up-lT2"/>
+                    </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="windowShopperBG" translatesAutoresizingMaskIntoConstraints="NO" id="gSw-Zx-zhT">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                            </imageView>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="windowShopperIcon" translatesAutoresizingMaskIntoConstraints="NO" id="Q2R-pK-2rN">
+                                <rect key="frame" x="157" y="55" width="60" height="60"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="60" id="e6q-QR-1h0"/>
+                                    <constraint firstAttribute="width" constant="60" id="g0e-HM-P6z"/>
+                                </constraints>
+                            </imageView>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Your hourly wage" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="0Kp-a8-22a" customClass="CurrencyTxtField" customModule="window_shopper" customModuleProvider="target">
+                                <rect key="frame" x="36" y="150" width="303" height="40"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="40" id="GQX-LN-9Xb"/>
+                                </constraints>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" keyboardType="decimalPad"/>
+                            </textField>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Item price" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Ufn-JQ-nOU" customClass="CurrencyTxtField" customModule="window_shopper" customModuleProvider="target">
+                                <rect key="frame" x="36" y="215" width="303" height="40"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="40" id="E3A-7s-maF"/>
+                                </constraints>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" keyboardType="decimalPad" enablesReturnKeyAutomatically="YES"/>
+                            </textField>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
+                        <constraints>
+                            <constraint firstItem="Ufn-JQ-nOU" firstAttribute="top" secondItem="0Kp-a8-22a" secondAttribute="bottom" constant="25" id="DbD-nn-ekZ"/>
+                            <constraint firstItem="Ufn-JQ-nOU" firstAttribute="trailing" secondItem="0Kp-a8-22a" secondAttribute="trailing" id="FfO-Dd-e3z"/>
+                            <constraint firstItem="zuT-Up-lT2" firstAttribute="top" secondItem="gSw-Zx-zhT" secondAttribute="bottom" id="Ima-r1-myb"/>
+                            <constraint firstItem="Ufn-JQ-nOU" firstAttribute="height" secondItem="0Kp-a8-22a" secondAttribute="height" id="Mkj-Iy-Nad"/>
+                            <constraint firstAttribute="trailing" secondItem="gSw-Zx-zhT" secondAttribute="trailing" id="Ngi-ap-Ele"/>
+                            <constraint firstItem="Ufn-JQ-nOU" firstAttribute="leading" secondItem="0Kp-a8-22a" secondAttribute="leading" id="OH7-T3-njy"/>
+                            <constraint firstItem="gSw-Zx-zhT" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="W9R-j7-0fF"/>
+                            <constraint firstItem="Q2R-pK-2rN" firstAttribute="top" secondItem="faJ-ed-Tum" secondAttribute="bottom" constant="35" id="ZFh-1W-nzA"/>
+                            <constraint firstItem="gSw-Zx-zhT" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="ZdT-Pb-NiN"/>
+                            <constraint firstItem="0Kp-a8-22a" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="20" id="m8S-Dh-soV"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="0Kp-a8-22a" secondAttribute="trailing" constant="20" id="rVZ-w7-pvi"/>
+                            <constraint firstItem="0Kp-a8-22a" firstAttribute="top" secondItem="Q2R-pK-2rN" secondAttribute="bottom" constant="35" id="taN-sQ-IJl"/>
+                            <constraint firstItem="Q2R-pK-2rN" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="ziZ-hk-8tP"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="priceTxt" destination="Ufn-JQ-nOU" id="1pn-wt-Djl"/>
+                        <outlet property="wageTxt" destination="0Kp-a8-22a" id="9XK-J6-WiZ"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="116" y="118.29085457271366"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="windowShopperBG" width="414" height="736"/>
+        <image name="windowShopperIcon" width="115" height="115"/>
+    </resources>
 </document>
