--- a/window-shopper/window-shopper/Base.lproj/Main.storyboard
+++ b/window-shopper/window-shopper/Base.lproj/Main.storyboard
@@ -9,6 +9,11 @@
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
+    <customFonts key="customFonts">
+        <array key="Avenir.ttc">
+            <string>Avenir-Medium</string>
+        </array>
+    </customFonts>
     <scenes>
         <!--MainVC-->
         <scene sceneID="tne-QT-ifu">
@@ -50,26 +55,65 @@
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits" keyboardType="decimalPad" enablesReturnKeyAutomatically="YES"/>
                             </textField>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="32" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qIU-V4-2j1">
+                                <rect key="frame" x="36" y="300" width="303" height="71.5"/>
+                                <fontDescription key="fontDescription" name="Avenir-Medium" family="Avenir" pointSize="52"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="hours" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7fb-17-7qg">
+                                <rect key="frame" x="137" y="376.5" width="100" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="100" id="Br9-ea-GsH"/>
+                                    <constraint firstAttribute="height" constant="30" id="ihT-GJ-WIs"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="Avenir-Medium" family="Avenir" pointSize="17"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="34o-a1-mPt">
+                                <rect key="frame" x="36" y="617" width="303" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="ycV-nk-Evz"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="Avenir-Medium" family="Avenir" pointSize="16"/>
+                                <state key="normal" title="Clear Calculator">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="clearCalculatorPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="okT-a5-Hng"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstItem="Ufn-JQ-nOU" firstAttribute="top" secondItem="0Kp-a8-22a" secondAttribute="bottom" constant="25" id="DbD-nn-ekZ"/>
+                            <constraint firstItem="zuT-Up-lT2" firstAttribute="top" secondItem="34o-a1-mPt" secondAttribute="bottom" constant="20" id="DnQ-Ur-c7I"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="34o-a1-mPt" secondAttribute="trailing" constant="20" id="EBW-YP-MYR"/>
                             <constraint firstItem="Ufn-JQ-nOU" firstAttribute="trailing" secondItem="0Kp-a8-22a" secondAttribute="trailing" id="FfO-Dd-e3z"/>
+                            <constraint firstItem="34o-a1-mPt" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="20" id="HtP-8i-KOg"/>
                             <constraint firstItem="zuT-Up-lT2" firstAttribute="top" secondItem="gSw-Zx-zhT" secondAttribute="bottom" id="Ima-r1-myb"/>
                             <constraint firstItem="Ufn-JQ-nOU" firstAttribute="height" secondItem="0Kp-a8-22a" secondAttribute="height" id="Mkj-Iy-Nad"/>
                             <constraint firstAttribute="trailing" secondItem="gSw-Zx-zhT" secondAttribute="trailing" id="Ngi-ap-Ele"/>
                             <constraint firstItem="Ufn-JQ-nOU" firstAttribute="leading" secondItem="0Kp-a8-22a" secondAttribute="leading" id="OH7-T3-njy"/>
                             <constraint firstItem="gSw-Zx-zhT" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="W9R-j7-0fF"/>
+                            <constraint firstItem="7fb-17-7qg" firstAttribute="top" secondItem="qIU-V4-2j1" secondAttribute="bottom" constant="5" id="WeM-A3-XWJ"/>
                             <constraint firstItem="Q2R-pK-2rN" firstAttribute="top" secondItem="faJ-ed-Tum" secondAttribute="bottom" constant="35" id="ZFh-1W-nzA"/>
                             <constraint firstItem="gSw-Zx-zhT" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="ZdT-Pb-NiN"/>
+                            <constraint firstItem="qIU-V4-2j1" firstAttribute="top" secondItem="Ufn-JQ-nOU" secondAttribute="bottom" constant="45" id="a73-9K-Tl5"/>
+                            <constraint firstItem="qIU-V4-2j1" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="h8B-B4-rhW"/>
                             <constraint firstItem="0Kp-a8-22a" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="20" id="m8S-Dh-soV"/>
+                            <constraint firstItem="qIU-V4-2j1" firstAttribute="width" secondItem="Ufn-JQ-nOU" secondAttribute="width" id="pD5-hZ-q5U"/>
+                            <constraint firstItem="7fb-17-7qg" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="q0g-yR-dWa"/>
                             <constraint firstAttribute="trailingMargin" secondItem="0Kp-a8-22a" secondAttribute="trailing" constant="20" id="rVZ-w7-pvi"/>
                             <constraint firstItem="0Kp-a8-22a" firstAttribute="top" secondItem="Q2R-pK-2rN" secondAttribute="bottom" constant="35" id="taN-sQ-IJl"/>
                             <constraint firstItem="Q2R-pK-2rN" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="ziZ-hk-8tP"/>
                         </constraints>
                     </view>
                     <connections>
+                        <outlet property="hoursLbl" destination="7fb-17-7qg" id="gIi-3j-zfa"/>
                         <outlet property="priceTxt" destination="Ufn-JQ-nOU" id="1pn-wt-Djl"/>
+                        <outlet property="resultLbl" destination="qIU-V4-2j1" id="B53-cR-3WU"/>
                         <outlet property="wageTxt" destination="0Kp-a8-22a" id="9XK-J6-WiZ"/>
                     </connections>
                 </viewController>
